sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:4: error: illegal start of simple expression
  var pos_player=[]
                 ^SelectBaseball:27: error: ';' expected but '[' found.
    return [j-1,0]
           ^SelectBaseball:30: error: ';' expected but '[' found.
    return [j-1,1]
           ^